# RS41ng

./: .gitignore  CMakeLists.txt  Dockerfile  NOTES.md  README.md  build-firmware.bat  build-firmware.sh  config.yaml.example  docker_build.sh  openocd_rs41.cfg  openocd_rs41_4x4.cfg  package.json  tsconfig.json
.github/workflows/: deploy-web.yml
cmake/: arm-none-eabi-gcc.cmake
docs/: README.md  aprs-debugging.adoc  infos_for_sensors.txt  pinout_extension_port.txt  rs41-models-1.md  rs41-models-2.md
docs/Si4063/revC2A/: index_all.html  index_bootloader.html  index_ezradiopro.html
docs/Si4063/revC2A/content/: CollapsibleLists.js  CommandControl.js  PropertyControl.js  TableListControl.js  apixml.css
legacy-code/: morse.c
scripts/: generate_config.ts  generate_example_config.ts
src/: CMakeLists.txt  STM32F100XB_FLASH.ld  STM32L412RBTX_FLASH.ld  arm-gcc-link.ld  bme68x_handler.c  bme68x_handler.h  bme690_handler.c  bme690_handler.h  bmp280_handler.c  bmp280_handler.h  cmake-clean  config-old.txt  config.c  config.h  config_internal.h  errors.c  errors.h  f_rtty.c  f_rtty.h  gpio.h  gps.h  landed.c  landed.h  locator.c  locator.h  log.c  log.h  main.c  main_old.txt  morse.h  payload.h  radio.c  radio.h  radio_internal.h  radio_payload_aprs.c  radio_payload_aprs.h  radio_payload_aprs_position.c  radio_payload_aprs_position.h  radio_payload_aprs_weather.c  radio_payload_aprs_weather.h  (+42 more)
src/codecs/aprs/: aprs.c  aprs.h  aprs_position.c  aprs_position.h  aprs_weather.c  aprs_weather.h
src/codecs/aprs_9600/: aprs_9600.c  aprs_9600.h
src/codecs/ax25/: ax25.c  ax25.h
src/codecs/bell/: bell.c  bell.h
src/codecs/cats/: cats.c  cats.h  crc.c  crc.h  interleaver.c  interleaver.h  ldpc.c  ldpc.h  ldpc_matrices.c  ldpc_matrices.h  whisker.c  whisker.h  whiten.c  whiten.h
src/codecs/fifo/: fifo.c  fifo.h
src/codecs/fsk/: fsk.h
src/codecs/horus/: horus_common.c  horus_common.h  horus_l2.c  horus_l2.h  horus_packet_v1.c  horus_packet_v1.h  horus_packet_v2.c  horus_packet_v2.h  horus_packet_v3.c  horus_packet_v3.h
src/codecs/horus/asn1/: HorusBinaryV3.asn1  HorusBinaryV3.c  HorusBinaryV3.h  asn1crt.c  asn1crt.h  asn1crt_encoding.c  asn1crt_encoding.h  asn1crt_encoding_uper.c  asn1crt_encoding_uper.h  assert_override.c  assert_override.h
src/codecs/jtencode/: jtencode.cpp  jtencode.h
src/codecs/jtencode/lib/: JTEncode.cpp  JTEncode.h  README.md  crc14.c  crc14.h  encode_rs_int.cpp  generator.h  init_rs.h  init_rs_int.cpp  int.h  rs_common.h
src/codecs/mfsk/: mfsk.c  mfsk.h
src/codecs/morse/: morse.c  morse.h
src/codecs/raw/: raw.c  raw.h
src/drivers/bme68x/: bme68x.c  bme68x_defs.h
src/drivers/bme69x/: bme69x.c  bme69x.h  bme69x_defs.h
src/drivers/bmp280/: bmp280.c  bmp280.h
src/drivers/gps/: gps_driver.h
src/drivers/gps/ubxg6010/: ubxg6010.c  ubxg6010.h
src/drivers/gps/ubxm10050/: ubxm10050.c  ubxm10050.h
src/drivers/hal/: clock_calibration.c  clock_calibration.h  datatimer.c  datatimer.h  delay.c  delay.h  hal.h  i2c.c  i2c.h  millis.c  millis.h  pwm.c  pwm.h  spi.c  spi.h  system.c  system.h  timers.c  timers.h  usart_ext.c  usart_ext.h  usart_gps.c  usart_gps.h
src/drivers/pulse_counter/: pulse_counter.c  pulse_counter.h
src/drivers/radsens/: radsens.cpp  radsens.h
src/drivers/si4032/: si4032.c  si4032.h
src/drivers/si4063/: bsp.h  dfm_cap_lut.h  radio_comm.c  radio_comm.h  radio_hal.c  radio_hal.h  si4063.c  si4063.h  si446x_api_lib.c  si446x_api_lib.h  si446x_cmd.h  si446x_defs.h  si446x_nirq.c  si446x_nirq.h  si446x_patch.h  si446x_prop.h
src/drivers/si5351/: si5351.cpp  si5351.h
src/drivers/si5351fast/: si5351mcu.cpp  si5351mcu.h
src/drivers/ubxg6010/: ubxg6010.c  ubxg6010.h
src/hal/: clock_calibration.c  datatimer.c  delay.c  delay.h  i2c.c  i2c.h  millis.c  millis.h  pwm.c  pwm.h  spi.c  spi.h  system.c  system.h  timepulse.c  timepulse.h  usart_ext.c  usart_gps.c
src/hal/cmsis_boot/: stm32f10x.h
src/hal/cmsis_boot/startup/: startup_stm32f10x_md_vl.c
src/hal/stm_lib/inc/: stm32f10x_i2c.h
src/hal/stm_lib/src/: stm32f10x_i2c.c
src/hal_stm32f1xx/: clock_calibration.c  clock_calibration.h  datatimer.c  datatimer.h  delay.c  delay.h  hal.h  i2c.c  i2c.h  millis.c  millis.h  pwm.c  spi.c  spi.h  system.c  system.h  timers.c  timers.h  usart_ext.c  usart_gps.c  usart_gps.h
src/hal_stm32f1xx/cmsis_boot/: system_stm32f1xx.c
src/hal_stm32f1xx/cmsis_boot/startup/: startup_stm32f10x_md_vl.c
src/hal_stm32f1xx/stm_lib/inc/: stm32f1xx_hal_conf.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_usart.h  stm32f1xx_hal_wwdg.h  stm32f1xx_ll_adc.h  stm32f1xx_ll_sdmmc.h
src/hal_stm32f1xx/stm_lib/src/: stm32f1xx_hal_gpio.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_i2s.c  stm32f1xx_hal_irda.c  stm32f1xx_hal_mmc.c  stm32f1xx_hal_nand.c  stm32f1xx_hal_pcd.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_sd.c  stm32f1xx_hal_tim.c  stm32f1xx_hal_uart.c  stm32f1xx_hal_usart.c  stm32f1xx_hal_wwdg.c
src/hal_stm32l4xx/cmsis_boot/: stm32l4xx.h
src/hal_stm32l4xx/stm_lib/inc/: stm32l4xx_hal_conf.h  stm32l4xx_hal_cryp.h  stm32l4xx_hal_mmc.h  stm32l4xx_hal_rng.h  stm32l4xx_hal_sd.h  stm32l4xx_ll_rng.h  stm32l4xx_ll_sdmmc.h
src/hal_stm32l4xx/stm_lib/src/: stm32l4xx_hal_cryp.c  stm32l4xx_hal_qspi.c  stm32l4xx_hal_rng.c  stm32l4xx_hal_rng_ex.c
src/syscalls/: semihosting.c  semihosting.h  syscalls.c
tests/: CMakeLists.txt  bell_test.c  morse_test.c  template_test.c  test_invariant_ax25.c
web/: README.md  config-schema.yaml  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  env.d.ts  main.ts  webusb.d.ts
web/src/components/common/: CopyButton.vue
web/src/components/flash/: BrowserCheck.vue  (+7 more)
web/src/composables/: useField.ts
web/src/config/: defaults.ts  flash-strategies.ts  flash-strategy.ts  format-value.ts  generate-example.ts  generate-header.ts  generate-source.ts  generate-yaml.ts  presets.ts  schema-loader.ts  schema-registry.ts  validation.ts  visibility.ts
web/src/stores/: config.ts  flasher.ts  ui.ts
web/src/test/: setup.ts
web/src/types/: config.ts  schema.ts
web/src/utils/: download.ts  webusb.ts
(+57 files in other folders)
